NNO-12244 Не срабатывает enabling зависимость кнопки при пустой resolve модели